[package]
name = "rtl8152-led-ctrl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Huang-Huang Bao <i@eh5.me>"]
repository = "https://github.com/EHfive/rtl8152-led-ctrl"
rust-version = "1.70"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
parse_int = "0.6.0"
rusb = "0.9.4"
